the end of 21.10.21.

--- a/css/header.css
+++ b/css/header.css
@@ -18,6 +18,7 @@
   padding-left: 0px !important;
   font-size: 16px !important;
   font-weight: 800;
+  letter-spacing: -0.0015em;
 }
 
 .nav-item {
