--- a/scss/header.scss
+++ b/scss/header.scss
@@ -27,6 +27,7 @@ $browngray: #ededed;
     padding-left: 0px!important;
     font-size: 16px!important;
     font-weight: 800;
+    letter-spacing: -0.0015em;
 }
 .nav-item {
     margin-right: 21.5px;   
