--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,8 @@ html, body {
         font-size: 16.2px!important;
         min-height: 100%;
         transition: all 0.7s ease-out;
+        width: 100%;
+        max-width: 100%;
 }
 #wrapper {
 }
@@ -85,7 +87,7 @@ h2 {
     font-size: 36px!important;
     font-weight: 600!important;
     text-transform: none;
-    letter-spacing: 0.005em;
+    letter-spacing: 0.01em;
     color: $black!important;
     margin: 0!important;
 }
@@ -135,7 +137,13 @@ h5 {
     border-bottom: dashed $lightblue;
     border-bottom-width: thick;
 }
-
+.image-poster {
+    max-height: 100%;
+    
+}
+.image-poster__item {
+    vertical-align: sub;
+}
 .col {
     //background-color: #f85c37;
     //border: 2px solid navy;
@@ -152,7 +160,7 @@ h5 {
     text-align: center;
 }
 p {
-    font-size: 14px;
+    font-size: 18px;
 }
 hr {
     display: block; 
@@ -210,13 +218,13 @@ hr {
     color: $white!important;
 }
 .border-dashed {
-    margin-bottom: -20px;
+    //margin-bottom: -20px;
 }
 .overview-wrapper, .detail-wrapper, .pricing-wrapper{
     background-color: $white;
 }
 .overview-wrapper, .detail-wrapper, .customise-wrapper, .feedbacks-wrapper, .pricing-wrapper, .contact-wrapper {
-    margin-bottom: 5rem;
+    margin-bottom: 5.05rem;
 } 
 .customise-wrapper {
     background-color: $easybrown;
