--- a/scss/inform.scss
+++ b/scss/inform.scss
@@ -14,7 +14,7 @@ $browngray: #ededed;
 }
 .info-cont {
     text-align: start;
-    margin-top: 40px!important;
+    margin-top: 42px!important;
 }
 .info-cont__heading {
     margin-top: -1px!important;     
@@ -69,4 +69,6 @@ $browngray: #ededed;
     margin-left: auto;
    // margin-top: auto!important;
     vertical-align: sub;
+    margin-top: 3px;
+    margin-right: 1px;
 }
