--- a/css/inform.css
+++ b/css/inform.css
@@ -1,6 +1,6 @@
 .info-cont {
   text-align: start;
-  margin-top: 40px !important;
+  margin-top: 42px !important;
 }
 
 .info-cont__heading {
@@ -57,4 +57,6 @@
   text-align: end;
   margin-left: auto;
   vertical-align: sub;
+  margin-top: 3px;
+  margin-right: 1px;
 }
