--- a/css/style.css
+++ b/css/style.css
@@ -10440,7 +10440,7 @@ h3 {
   }
 }
 * {
-  box-sizing: border-box !important;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -10610,7 +10610,7 @@ p {
 }
 
 .overview-wrapper {
-  margin-bottom: 58px !important;
+  margin-bottom: 55px !important;
 }
 
 .feedbacks-wrapper {
@@ -10618,8 +10618,8 @@ p {
 }
 
 .detail-wrapper {
-  margin-top: 23px;
-  margin-bottom: 17px !important;
+  margin-top: 26px;
+  margin-bottom: 18px !important;
 }
 
 .customise-wrapper {
@@ -10679,6 +10679,11 @@ p {
 
   .rehearsal-heading {
     padding-right: auto;
+  }
+}
+@media (min-width: 992px) {
+  .headi {
+    height: 640px;
   }
 }
 @media (max-width: 767px) {
