--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,7 +57,7 @@ $maxWidthContainer: 1200;
 }
 
 * {
-    box-sizing: border-box!important;    
+    box-sizing: border-box; 
     //overflow: hidden;
     //display: flex;
     //flex-direction: column;
@@ -229,14 +229,14 @@ p {
     background-color: $white;
 }
 .overview-wrapper {
-    margin-bottom: 58px!important;
+    margin-bottom: 55px!important;
 }
 .feedbacks-wrapper    {
     margin-bottom: 5rem;
 }
 .detail-wrapper {
-    margin-top: 23px;
-    margin-bottom: 17px !important
+    margin-top: 26px;
+    margin-bottom: 18px !important
 } 
 .customise-wrapper {
     background-color: $easybrown;
@@ -295,7 +295,10 @@ p {
         padding-right: auto;
     }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
+    .headi {
+        height: 640px;
+    }
 }
 @media (max-width:767px) {
     /*.nav-lgo {
