--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@
 .navbar-brand b {
   font-family: "Inconsolata", sans-serif !important;
   font-weight: 700;
-  font-size: 27px;
+  font-size: 28px;
 }
 
 .headi {
@@ -22,11 +22,12 @@
 
 .nav-link {
   padding-right: 0px !important;
-  padding-left: 0px !important;
+  padding: 0px !important;
   margin-top: -5px;
   font-size: 16px !important;
   font-weight: 800;
   letter-spacing: -0.001em;
+  position: relative;
 }
 
 .nav-item {
@@ -37,18 +38,31 @@
   margin-right: 0 !important;
 }
 
-.nav-item:hover::after {
+.nav-link:hover {
+  transition: 1s;
+  text-shadow: 5px 5px 10px #008ed6;
+}
+
+.nav-link:hover::after {
   content: url("/img/border-dashed.png");
+  height: 2px !important;
+  position: absolute;
+  bottom: 7px;
+  left: 0;
+  width: 100%;
+}
+
+.nav-link.active::after {
+  content: url("/img/border-dashed.png");
+  height: 2px !important;
+  position: absolute;
+  bottom: 7px;
+  left: 0;
 }
 
 .head-navbar {
   padding: 0px !important;
   min-height: 100px;
-}
-
-.logo {
-  display: flex;
-  text-align: center;
 }
 
 .logo-info {
@@ -89,6 +103,11 @@
   flex-wrap: nowrap;
   padding: 20px 0;
   padding-left: 0 !important;
+}
+
+.nav-lgo:hover {
+  transition: 1s;
+  text-shadow: 2px 2px 10px #008ed6;
 }
 
 .menu {
