--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -9,5 +9,18 @@ $darkgray: #444348;
 $black: #1a1a1a;
 $browngray: #ededed;
 .contact-wrapper {
-    height: 715px;
+    min-height: 715px;
+    background-color: $browngray;
+}
+.contact-info {
+    text-align: center;
+    margin-bottom: 40px;
+}
+.h5-cont {
+    padding-top: 56px!important;
+    margin-bottom: 11px!important;
+}
+.h2-cont {
+    margin-bottom: 11px!important;
+    color: $black!important;
 }
