--- a/scss/feedbacks.scss
+++ b/scss/feedbacks.scss
@@ -51,9 +51,11 @@ $browngray: #ededed;
     letter-spacing: 0.00em;
     line-height: 32px;
 }
+.feed-carousel-item__author__row {
+    margin: 0!important;
+}
 .feed-carousel-item__author {
     text-align: start;
-    margin-left: 15px;
 }
 .feed-carousel-item__author_pos-img {
     margin-right: 24px;
@@ -103,5 +105,11 @@ $browngray: #ededed;
 @media (max-width: 767px) {
     .feed-carousel-item__cite__item {
         text-align: center!important;
+    }
+    .feed-carousel-item__author {
+        text-align: center;
+    }
+    .feed-carousel-item__author__image {
+        margin: 0 auto;
     }
 }
