--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,7 +10,7 @@ $browngray: #ededed;
 .navbar-brand b {
     font-family: 'Inconsolata', sans-serif!important;
     font-weight: 700;
-    font-size: 27px;
+    font-size: 28px;
 }
 .headi {
     background-image: url('/img/header/header_bg.png');
@@ -30,11 +30,12 @@ $browngray: #ededed;
 }
 .nav-link {
     padding-right:  0px!important;
-    padding-left: 0px!important;
+    padding: 0px!important;
     margin-top: -5px;
     font-size: 16px!important;
     font-weight: 800;
     letter-spacing: -0.001em;
+    position: relative;
 }
 .nav-item {
     margin-right: 21.5px;   
@@ -45,18 +46,33 @@ $browngray: #ededed;
 .active {
     // font-size: large;
 }
-.nav-item:hover::after {
+.nav-link:hover {
+    transition: 1s;
+   // margin: 0 2px;
+    text-shadow: 5px 5px 10px $lightblue;
+}
+.nav-link:hover::after {
     content: url('/img/border-dashed.png');
+    height: 2px!important;
+    position: absolute;
+    bottom: 7px;
+    left: 0;
+    width:100%;
+}
+.nav-link.active {
+    &::after {
+        content: url('/img/border-dashed.png');
+        height: 2px!important;
+        position: absolute;
+        bottom: 7px;
+        left: 0;
+    }
 }
 .head-navbar {
     padding: 0px!important;
     min-height: 100px;
 }
 .nav-menu {
-}
-.logo {
-    display: flex;
-    text-align: center;
 }
 .logo-info {
     /*opacity: 0.3;
@@ -97,6 +113,11 @@ $browngray: #ededed;
     //border: 2px solid $white;
     padding: 20px 0;
     padding-left: 0!important;
+}
+.nav-lgo:hover {
+    transition: 1s;
+    // margin: 0 2px;
+     text-shadow: 2px 2px 10px $lightblue;
 }
 .menu {
     margin: 0 auto!important;
