the middle part of 26.10.21

--- a/css/header.css
+++ b/css/header.css
@@ -166,3 +166,16 @@
     text-align: center;
   }
 }
+@media (max-width: 991px) {
+  .nav-link {
+    padding: 5px 0 !important;
+  }
+
+  .nav-link:hover {
+    content: none;
+  }
+
+  .nav-link.active::after {
+    content: none;
+  }
+}
