--- a/scss/header.scss
+++ b/scss/header.scss
@@ -183,3 +183,16 @@ $browngray: #ededed;
         text-align: center;
     }
 }
+@media (max-width: 991px) {
+    .nav-link {
+        padding: 5px 0!important;
+        &:hover{
+            content: none;
+        }
+    }
+    .nav-link.active {
+        &::after {
+            content: none;
+        }
+    }
+}
