--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,12 +63,9 @@ $maxWidthContainer: 1200;
     //flex-direction: column;
 }
 html, body {
-        -webkit-font-smoothing: antialised!important;
         margin: 0;
         padding: 0;
         width: 100%;
-        //background-image: $theme-bgim!important;
-        color: #555!important;
 
         font-family: 'Source Sans Pro', sans-serif!important;
         font-size: 16.2px!important;
@@ -269,9 +266,10 @@ p {
     ///padding-right: 0!important;
 }
 .rehearsal-heading__text {
+    margin-left: -1px!important;
     margin-top: 1px!important;
     font-weight: 300!important;
-    letter-spacing: 0.0010em;
+    letter-spacing: 0.002em;
     b {
         font-weight: 600;
     }
@@ -288,6 +286,7 @@ p {
     .rehearsal-heading__text {
         text-align: center;
         margin-bottom: 20px!important;
+        font-size: calc(30px + 6 * (100vw - 320px) / 1600)!important;
     }
     .rehearsal-buttons {
         text-align: center;
