--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -8,13 +8,48 @@ $dark: #15141a;
 $darkgray: #444348;
 $black: #1a1a1a;
 $browngray: #ededed;
+
+
+
+$maxWidth:  1920;
+$maxWidthContainer: 1200;
+
+@mixin  adaptiv-value($property, $startSize, $minSize, $type) {
+    $addSize: $startSize - $minSize;
+    @if $type==1 {
+        #{$property}: $startSize + px; 
+        @media (max-width: #{$maxWidthContainer + px}) {
+            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
+        }
+    }
+
+    @else if $type==2 {
+        #{$property}: $startSize + px; 
+        @media (min-width: #{$maxWidthContainer + px}) {
+            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+        }
+    }
+    @else if $type==3 {
+        #{$property}: $startSize + px; 
+        @media (min-width: #{$maxWidthContainer + px}) {
+            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 850px) / #{$maxWidth - 850}));
+        }
+    }
+    @else {
+        #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+    }
+}
 .contact-wrapper {
     min-height: 715px;
     background-color: $browngray;
 }
 .contact-info {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 54px;
+}
+.blocks {
+    //margin-left: -30px;
+    //margin-right: -30px;
 }
 .h5-cont {
     padding-top: 56px!important;
@@ -23,4 +58,158 @@ $browngray: #ededed;
 .h2-cont {
     margin-bottom: 11px!important;
     color: $black!important;
+}
+.contacts-tar {
+    margin-bottom: 68.3px;
+}
+.contacts-item  {
+    text-align: center;
+}
+.contacts-item__tel, .contacts-item__geo, .contacts-item__mail {
+
+    text-align: center;
+}
+.contacts-item__text__item {
+    margin: 0;
+    color: $lightgray;
+    font-size: 18px;
+    letter-spacing: 0.015em;
+    line-height: 26px;
+}
+.contacts-item__tel__img {
+    margin-bottom: 26px;
+}
+.contacts-item__geo__img {
+    margin-bottom: 26px;
+}
+.contacts-item__mail__img {
+    margin-bottom: 31px;
+    margin-top: 2px;
+    margin-left: -3px;
+}
+._tel {
+    letter-spacing: 0.02em !important;
+    margin-left: -4px;
+}
+.cont-row {
+    position: relative;
+}
+.cont-form {
+    z-index: 9999;
+}
+.cont-form__wrapper {
+    position: absolute;
+    min-height: 360px;
+    max-width: 770px;
+    min-width: 290px;
+    background-color: $dark;
+}
+.form-row {
+    margin: 0!important;
+    margin-top: 59px!important;
+}
+.form-row__col {
+    padding-left: 0!important;
+}
+.form-row__col._2 {
+    margin-left: -2px;
+}
+.form-row__col._1 {
+    margin-left: 2px;
+}
+.form__input  {
+    background-color: $dark;
+    border: 1px solid $darkgray;
+    max-width: 300px;
+    border-radius: 4px;
+    padding-left: 16px;
+    opacity: 0.2;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $white;  
+}
+.form__input.form_textarea {
+    padding-top: 14px;
+    padding-left: 20px;
+}
+.form__input, .form__item {
+    //max-width: 300px;
+}
+.form__input:focus {
+    border: 2px solid $lightblue;
+    box-shadow: 0 0 15px $lightblue;
+    outline-style: none;
+}
+.form__item ._error {
+    box-shadow: inset 0 0 15px #fac3c3;
+    border: 1px solid #fd9898;
+    font-family: 'PT Sans';
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 400;
+    font-style: italic;
+    color: #dc7f7f;
+    opacity: 0.5; 
+}
+.form_textarea {
+    //max-width: 300px;
+    height: 190px;
+    resize: none;
+}
+.form__input._name, .form__input._email, .form__input._spec {
+    height: 50px;
+    margin-bottom: 20px;
+} 
+.form__item__button {
+    text-align: end!important;
+}
+.form__input__button {
+    margin-right: 16px;
+    margin-top: 15px;
+}
+@media (min-width: 1440px) {
+    .cont-form__wrapper {
+        width: 770px;
+    }
+    .form__input {
+        width: 300px;
+    }
+}
+
+@media (max-width: 1439px) {
+    .cont-form__wrapper {
+        @include adaptiv-value("width", 1000, 290, 0);
+    }
+    .form__input {
+        @include adaptiv-value("width", 300, 200, 0);
+    }
+    .form-row__col._2 {
+        text-align: end;
+    }
+    .form__input {
+        width: 100%;
+    }
+    .rehearsal-heading__text {
+        @include adaptiv-value("font-size", 36, 30, 0);
+    }
+}
+@media (max-width: 991px) {
+    .form-row__col {
+        //padding-left: 15px!important;
+    }
+    .cont-form__wrapper {
+        position: relative;
+    }
+    .contact-wrapper {
+        @include adaptiv-value("padding-bottom", 0, 50, 0);
+    }
+}
+@media (max-width: 767px) {
+    .form-row__col, .form__item__button {
+        text-align: center!important;
+    }
+    .form-input {
+        margin: 0 auto;
+    }
 }
