--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,98 +1,220 @@
 @import "./variables.scss";
+@import "./media.scss";
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap');
-$lightblue: #008ed6;
-$white: #ffffff;
-$lightgray: #999999;
-$easybrown: #f2f2f2;
-$dark: #15141a;
-$darkgray: #444348;
-$black: #1a1a1a;
-$browngray: #ededed;
-.headi {
-    min-height: 640px;
-    background-image: url('/img/header/header_bg.png');
-    overflow: hidden;
-    background-size: cover;
-    background-position: center center;
-    .header {
-        align-items: center;
-        text-align: center;
-        margin-bottom: 18px;
-        .head-cont {
-            .head-navb {
-                min-height: 100px;
-                padding: 0;
-                .head-navb__lgo {
-                    .head-navb__lgo__br {
-                        font-family: 'Quicksand', sans-serif;
-                        font-size: 24px;
-                        font-weight: 700;
-                        text-transform: uppercase;
-                        color: $white;
-                        //padding: 0 15px;
-                        margin-right: 5px;
-                        letter-spacing: 0.6px;
-                        & b {
-                            font-family: 'Inconsolata', sans-serif;
-                            font-weight: 700;
-                            font-size: 27px;
-                        }
-                    }
-                    .head-navb__info {
-                        .head-navb__info__txt {
-                            opacity: 0.5;
-                            font-size: 9px;
-                            font-weight: 400;
-                            text-transform: uppercase;
-                            letter-spacing: 0.14em;
-                            color: $white;
-                            text-align: start;
-                            margin: $auto 0;
-                            line-height: 10px;
-                            padding-top: 2px;
-                            margin-left: 4px;
-                        }
-                    }
-                }
-                .head-navb__toggler {
-                    min-height: 30px;
-                    min-width: 40px;
-                    border: 1px solid $darkgray;
-                }
-                .head-menu {
-                    .head-menu__list {
-                        .head-menu__list__item {
-                            margin-right: 21.5px;
-                            &:last-child {
-                                margin-right: 0;
-                            }
-                            &.active {}
-                            .head-menu__list__item__link {
-                                padding: 0px;
-                                margin-top: -5px;
-                                font-size: 16px;
-                                font-weight: 800;
-                                letter-spacing: -0.001em;
-                                position: relative;
-                                &:hover {
-                                    text-shadow: 5px 5px 10px $lightblue;
-                                    transition: 1s;
-                                    color: $lightgray;
-                                    &::after {
-                                        content: url('/img/border-dashed.png');
-                                        height: 2px;
-                                        position: absolute;
-                                        bottom: 7px;
-                                        left: 50%;
-                                    }
+
+
+* {
+    box-sizing: border-box;
+    
+    html,body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        font-family: $sourcesans-sf;
+        font-size: 16.2px;
+        min-height: 100%;
+        transition: all 0.7s ease-out;
+        width: 100%;
+        max-width: 100%;
+        a {
+            color: $white;
+        }
+        
+        h1 {
+            font-size: 48px;
+            line-height: 65px;
+            font-weight: 600;
+            text-transform: none;
+            letter-spacing: normal;
+        }
+        
+        h2 {
+            font-size: 37px;
+            font-weight: 600;
+            text-transform: none;
+            letter-spacing: 0.01em;
+            color: $black;
+            margin: 0;
+        }
+        
+        h5 {
+            font-size: 14px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            color: $lightblue;
+            margin: 0;
+        }
+        
+        hr {
+            margin-top: 0;
+            margin-bottom: 0;
+            border: 1px solid $browngray;
+            border-top-color: $browngray;
+        }
+        
+        button {
+            text-transform: uppercase;
+        }
+        
+        button:hover {
+            transition: 1s;
+            box-shadow: 10px 5px 5px rgba(0, 142, 214, 0.5);
+        }
+        
+        .container {
+            max-width: 1200px;
+        }
+        
+        .btn-primary {
+            width: 160px;
+            height: 50px;
+            background-color: $lightblue;
+            box-shadow: 0px 0px 3px 0px rgba(3, 3, 3, 0.1);
+            font-size: 14px;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: $white;
+            padding: 0 auto;
+        }
+        
+        .btn-outline-secondary {
+            width: 160px;
+            height: 50px;
+            font-size: 14px;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: $white;
+            padding: 0 auto;
+        }
+        .btn-primary {
+            background-color: $lightblue;
+        }
+        .centered {
+            text-align: center;
+        }
+        
+        p {
+            font-size: 18px;
+        }
+        .image-poster {
+            max-height: 100%;
+        } 
+        
+        .image-poster__item {
+            vertical-align: sub;
+        }
+        .headi {
+            min-height: 640px;
+            background-image: url('/img/header/header_bg.png');
+            overflow: hidden;
+            background-size: cover;
+            background-position: center center;
+            display: flex;
+            flex-direction: column;
+            .header {
+                align-items: center;
+                text-align: center;
+                margin-bottom: 18px;
+                .head-cont {
+                    .head-navb {
+                        min-height: 100px;
+                        padding: 0;
+                        .head-navb__lgo {
+                            .head-navb__lgo__br {
+                                font-family: 'Quicksand', sans-serif;
+                                font-size: 24px;
+                                font-weight: 700;
+                                text-transform: uppercase;
+                                color: $white;
+                                //padding: 0 15px;
+                                margin-right: 5px;
+                                letter-spacing: 0.6px;
+                                & b {
+                                    font-family: 'Inconsolata', sans-serif;
+                                    font-weight: 700;
+                                    font-size: 27px;
                                 }
-                                &.active {
-                                    &::after {
-                                        content: url('/img/border-dashed.png');
-                                        height: 2px;
-                                        position: absolute;
-                                        bottom: 7px;
-                                        left: 0;
+                            }
+                            .head-navb__info {
+                                .head-navb__info__txt {
+                                    opacity: 0.5;
+                                    font-size: 9px;
+                                    font-weight: 400;
+                                    text-transform: uppercase;
+                                    letter-spacing: 0.14em;
+                                    color: $white;
+                                    text-align: start;
+                                    margin: $auto 0;
+                                    line-height: 10px;
+                                    padding-top: 2px;
+                                    margin-left: 4px;
+                                }
+                            }
+                        }
+                        .head-navb__toggler {
+                            min-height: 30px;
+                            min-width: 40px;
+                            border: 1px solid $darkgray;
+                        }
+                        .head-menu {
+                            .head-menu__list {
+                                .head-menu__list__item {
+                                    margin-right: 21.5px;
+                                    &:last-child {
+                                        margin-right: 0;
+                                    }
+                                    &.active {}
+                                    @media (max-width: 991px) {
+                                        margin-right: 0;
+                                    }
+                                    .head-menu__list__item__link {
+                                        padding: 0px;
+                                        margin-top: -5px;
+                                        font-size: 16px;
+                                        font-weight: 800;
+                                        letter-spacing: -0.001em;
+                                        position: relative;
+                                        @media (max-width: 991px) {
+                                            padding: 10px 0;
+                                            &:hover {
+                                                background-color: $lightblue;
+                                                padding: 15px 0;
+                                                margin-top: -1px;
+                                                &::after {
+                                                    content: none;
+                                                }
+                                            }
+                                        }
+                                        &:hover {
+                                            text-shadow: 5px 5px 10px $lightgray;
+                                            transition: 1s;
+                                            color: $white;
+                                            &::after {
+                                                content: url('/img/border-dashed.png');
+                                                height: 2px;
+                                                position: absolute;
+                                                bottom: 7px;
+                                                left: 2px;
+                                                left: 2px;
+                                                width: 100%;
+                                                @media (max-width: 991px) {
+                                                    content: none;
+                                                }
+                                            }
+                                        }
+                                        &.active {
+                                            &::after {
+                                                content: url('/img/border-dashed.png');
+                                                height: 2px;
+                                                position: absolute;
+                                                bottom: 7px;
+                                                left: 0;
+                                                @media(max-width: 991px) {
+                                                    content: none;
+                                                }
+                                            }
+                                        }
                                     }
                                 }
                             }
@@ -100,70 +222,96 @@ $browngray: #ededed;
                     }
                 }
             }
-        }
-    }
-    .inform {
-        .info-container {
-            .info-row {
-                .info {
-                    .info-cont {
-                        text-align: start;
-                        margin-top: 42px;
-                        .info-cont__heading {
-                            margin-top: -1px;
-                            margin-bottom: 21px;
+            .inform {
+                min-height: 480px;
+                margin-top: auto;
+                .info-container {
+                    .info-row {
+                        @media (max-width: 991px) {
+                            flex-wrap: wrap;
                         }
-                        .info-cont__title {
-                            font-size: 48px;
-                            line-height: 48px;
-                            font-weight: 600;
-                            text-transform: none;
-                            letter-spacing: 0.0007em;
-                            color: $white;
-                            margin-bottom: 24px;
-                            .bugfix {
-                                letter-spacing: 0;;
+                        .info {
+                            .info-cont {
+                                text-align: start;
+                                margin-top: 42px;
+                                .info-cont__heading {
+                                    margin-top: -1px;
+                                    margin-bottom: 21px;
+                                }
+                                .info-cont__title {
+                                    font-size: 48px;
+                                    line-height: 48px;
+                                    font-weight: 600;
+                                    text-transform: none;
+                                    letter-spacing: 0.0007em;
+                                    color: $white;
+                                    margin-bottom: 24px;
+                                    .bugfix {
+                                        letter-spacing: 0;;
+                                    }
+                                }
+                                .info-cont__about {
+                                    font-size: 18px;
+                                    font-weight: 400;
+                                    text-transform: none;
+                                    letter-spacing: 0.017em;
+                                    color: #999999;
+                                    padding-right: 5rem;
+                                    margin-bottom: 60px;
+                                    line-height: 26px;
+                                    @media (max-width:767px) {
+                                        padding-right: 0px;
+                                    }
+                                }
+                                .info-cont__buttons {
+                                    @media (max-width: 374px) { 
+        
+                                    }
+                                    .info-cont__buttons__primary { 
+                                        margin-right: 9px;
+                                        @media (max-width: 575px) { 
+                                            width: 125px;
+                                            font-size: 12px;
+                                        }
+                                    }
+                                    .info-cont__buttons__outline__secondary {
+                                        margin-left: 9px;
+                                        color: $white;
+                                        @media (max-width: 575px) { 
+                                            width: 125px;
+                                            font-size: 12px;
+                                        }
+                                    }
+                                }
                             }
                         }
-                        .info-cont__about {
-                            font-size: 18px;
-                            font-weight: 400;
-                            text-transform: none;
-                            letter-spacing: 0.017em;
-                            color: #999999;
-                            padding-right: 5rem;
-                            margin-bottom: 60px;
-                            line-height: 26px;
-                        }
-                        .info-cont__buttons {
-                            .info-cont__buttons__primary { 
-                                margin-right: 9px;
-                            }
-                            .info-cont__buttons__outline__secondary {
-                                margin-left: 9px;
-                                color: $white;
-                            }
-                        }
-                    }
-                }
-                .info-image {
-                    padding: 0;
-                    max-height: 100%;
-                    text-align: end;
-                    margin-left: auto;
-                    margin-top: auto;
-                    .info-image__block {
-                        max-height: 100%;
-                        text-align: end;
-                        margin-left: auto;
-                        margin-top: auto;
-                        .info-image__item {
+                        .info-image {
+                            padding: 0;
+                            max-height: 100%;
                             text-align: end;
                             margin-left: auto;
-                            // margin-top: auto!important;
-                            vertical-align: sub;
-                            margin-top: 3px;
-                            margin-right: 1px;
+                            margin-top: auto;
+                            .info-image__block {
+                                max-height: 100%;
+                                text-align: end;
+                                margin-left: auto;
+                                margin-top: auto;
+                                @media (max-width: 767px) {
+                                    margin-top: 20px;
+                                    text-align: center;
+                                }
+                                .info-image__item {
+                                    text-align: end;
+                                    margin-left: auto;
+                                    // margin-top: auto!important;
+                                    vertical-align: sub;
+                                    margin-top: 3px;
+                                    margin-right: 1px;
+                                    @media (max-width: 767px) {
+                                        margin: 0;
+                                    }
+                                }
+                            }
                         }
                     }
                 }
