--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,6 +10,12 @@ $darkgray: #444348;
 $black: #1a1a1a;
 $browngray: #ededed;
 $pinkiered: #ff7878;
-$maxWidthContainer: 1200px;
-$maxWidth: 1980px;
+
+
+$maxWidthContainer: 1170px;
+$maxWidth: 1920px;
+
+$sourcesans-sf: 'Source Sans Pro', sans-serif;
+
+
 $auto: auto;
