--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,3 +1,6 @@
+@import "./variables.scss";
+@import "./media.scss";
+
 .contact-wrapper {
     background-color: $browngray;
     min-height: 715px;
@@ -5,10 +8,16 @@
         .contact-info  {
             text-align: center;
             margin-bottom: 50px;
+            @media (max-width: 767px) {
+                margin-bottom: 20px;
+            }
             .contact-info-header {
                 .h5-cont {
                     padding-top: 56px;
                     margin-bottom: 11px;
+                    @media (max-width: 767px) {
+                        padding-top: 20px;  
+                    }
                 }
                 .h2-cont {
                     margin-bottom: 14px;
@@ -19,6 +28,9 @@
         }
         .contacts-tar  {
             margin-bottom: 68.3px;
+            @media (max-width: 767px) {
+                margin-bottom: 30px;
+            }
             .contacts-item {
                 text-align: center;
                 .contacts-item__tel {
@@ -39,7 +51,6 @@
                             letter-spacing: 0.02em !important;
                             margin-left: -4px;
                         }
-
                     }
                 }
                 .contacts-item__geo {
@@ -79,89 +90,103 @@
             }
         }
         .cont-row {
+            position: relative;
+            .cont-form {
+                z-index: 9999;
+                .cont-form__wrapper {
+                    min-height: 360px;
+                    max-width: 770px;
+                    min-width: 290px;
+                    padding: 0;
+                    background-color: $dark;
+                    @media (max-width: 991px) {
+                        .cont-form__wrapper {
 
+                        }
+                    }
+                    .form-group {
+                        .form-row {
+                            margin: 0;
+                            margin-top: 59px;
+                            .form-row__col {
+                                padding-left: 0;
+                                &._1, &._2 {
+                                    margin-left: 2px;
+                                    .form__item {
+                                        .form__input {
+                                            background-color: $dark;
+                                            border: 1px solid $darkgray;
+                                            max-width: 300px;
+                                            border-radius: 4px;
+                                            padding-left: 16px;
+                                            opacity: 0.2;
+                                            font-size: 14px;
+                                            font-weight: 700;
+                                            text-transform: uppercase;
+                                            color: $white;  
+                                            &._name, &._email, &._spec {
+                                                height: 50px;
+                                                margin-bottom: 20px;
+                                            }
+                                            &.form_textarea {
+                                                padding-top: 14px;
+                                                padding-left: 20px;
+                                                height: 190px;
+                                                resize: none;
+                                            }
+                                            &:focus {
+                                                border: 2px solid $lightblue;
+                                                box-shadow: 0 0 15px $lightblue;
+                                                outline-style: none;
+                                            }
+                                            &._error {
+                                                box-shadow: inset 0 0 15px #fac3c3;
+                                                border: 1px solid #fd9898;
+                                                font-family: 'PT Sans';
+                                                font-size: 14px;
+                                                line-height: 1.2;
+                                                font-weight: 400;
+                                                font-style: italic;
+                                                color: #dc7f7f;
+                                                opacity: 0.5; 
+                                            }
+                                        }
+                                        
+                                    }
+                                }
+                                &._1 {
+                                    margin-left: 2px;
+                                }
+                                &._2 {
+                                    margin-left: -2px;
+                                    .form__item {
+                                        .form_textarea {
+    
+                                        }
+                                    }
+                                    .form__item__button {
+                                        text-align: end;
+                                        .form__input__button {
+                                            margin-right: 16px;
+                                            margin-top: 15px;
+                                            background-color: $lightblue;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
+.map {
+    z-index: 0;
+    margin-top: -65px;
+}   
 
 
-.cont-row {
-    position: relative;
-}
-.cont-form {
-    z-index: 9999;
-}
-.cont-form__wrapper {
-    position: absolute;
-    min-height: 360px;
-    max-width: 770px;
-    min-width: 290px;
-    background-color: $dark;
-}
-.form-row {
-    margin: 0!important;
-    margin-top: 59px!important;
-}
-.form-row__col {
-    padding-left: 0!important;
-}
-.form-row__col._2 {
-    margin-left: -2px;
-}
-.form-row__col._1 {
-    margin-left: 2px;
-}
-.form__input  {
-    background-color: $dark;
-    border: 1px solid $darkgray;
-    max-width: 300px;
-    border-radius: 4px;
-    padding-left: 16px;
-    opacity: 0.2;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: $white;  
-}
-.form__input.form_textarea {
-    padding-top: 14px;
-    padding-left: 20px;
-}
-.form__input, .form__item {
-    //max-width: 300px;
-}
-.form__input:focus {
-    border: 2px solid $lightblue;
-    box-shadow: 0 0 15px $lightblue;
-    outline-style: none;
-}
-.form__item ._error {
-    box-shadow: inset 0 0 15px #fac3c3;
-    border: 1px solid #fd9898;
-    font-family: 'PT Sans';
-    font-size: 14px;
-    line-height: 1.2;
-    font-weight: 400;
-    font-style: italic;
-    color: #dc7f7f;
-    opacity: 0.5; 
-}
-.form_textarea {
-    //max-width: 300px;
-    height: 190px;
-    resize: none;
-}
-.form__input._name, .form__input._email, .form__input._spec {
-    height: 50px;
-    margin-bottom: 20px;
-} 
-.form__item__button {
-    text-align: end!important;
-}
-.form__input__button {
-    margin-right: 16px;
-    margin-top: 15px;
-}
 @media (min-width: 1440px) {
     .cont-form__wrapper {
         width: 770px;
