--- a/scss/_detail.scss
+++ b/scss/_detail.scss
@@ -8,17 +8,30 @@
                 .detail-image {
                     .detail-image__block {
                         text-align: start;
+                        @media (max-width: 767px) {
+                            text-align: center;
+                        }
                         .detail-image__item {
                             margin-top: 40px;
                             margin-left: 20px;
                             vertical-align: sub;
+                            @media (max-width: 767px) {
+                                margin: 0;
+                            }
                         }
                     }
                 }
                 .detail-info {
                     text-align: start;
+                    @media (max-width: 767px) {
+                        text-align: center;
+                    }
                     .detail-info-heading {
                         margin-top: 90px;
+                        @media (max-width: 767px) {
+                            margin: 0;
+                            margin-top: 20px;
+                        }
                         .h5-details {
 
                         }
@@ -41,6 +54,9 @@
                             margin-top: 24px;
                             padding-left: 1px;
                             list-style-type: none;
+                            @media (max-width: 767px) {
+                                text-align: start;
+                            }
                             .details-info-list__item {
                                 position: relative;
                                 font-size: 18px;
@@ -79,12 +95,18 @@
         background-color: $easybrown;
         padding-bottom: 17px;
         min-height: 526px;
+        @media (max-width: 767px) {
+            padding-bottom : 20px;
+        }
         .customise-cont {
             .customise-row {
                 .customise-info {
                     padding-right: 0;
                     .customise-info-heading {
                         margin-top: 129px;
+                        @media (max-width: 767px) {
+                            margin-top: 20px;
+                        }
                         .h2-customise {
                             margin-top: 11px;
                             letter-spacing: -0.01em;
@@ -98,6 +120,10 @@
                         font-weight: 300;
                         line-height: 26px;
                     }
+                    @media (max-width: 767px) {
+                        text-align: center;
+                        padding-right: 15px;
+                    }
                 }
                 .customise-img {
                     .customise-image {
@@ -107,23 +133,14 @@
                                 margin-top: 33px;
                                 margin-left: -29px;
                                 vertical-align: sub;
+                                @media (max-width: 767px) {
+                                    margin: 0;
+                                }
                             }
                         }
                     }
                 }
             }
         }
-    }
-}
-
-@media (min-width: 1220px) {
-    .customise-image__item {
-        max-width: 718px!important;
-    }
-}
-@media (max-width: 767px) {
-    .detail-image__item {
-        margin-top: 0px;
-        margin-left: 0px;
     }
 }
