--- a/scss/_rehearsal.scss
+++ b/scss/_rehearsal.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+@import "./media.scss";
 .rehearsal {
     .rehearsal-wrapper {
         background-color: $dark;
@@ -13,6 +15,11 @@
                         font-weight: 300;
                         letter-spacing: -0.01em;
                         color: $white;
+                        @media (max-width: 1199px) {
+                            text-align: center;
+                            margin-bottom: 20px;
+                            font-size: calc(30px + 6 * (100vw - 320px) / 1600);
+                        }
                         .rehearsal-heading__text__bold {
                             font-weight: 600;
                         }
@@ -23,6 +30,21 @@
                     flex-wrap: nowrap;
                     .rehearsal-buttons__primary {
                         margin-left: 17px;
+                        @media (max-width: 767px) {
+                            width: 125px;
+                            margin-bottom: 0;
+                            font-size: 12px;
+                        }
+                    }
+                    .btn-outline-secondary  {
+                        @media (max-width: 575px) {
+                            width: 125px;
+                            font-size: 12px;
+                        }
+                    }
+                    @media (max-width: 1199px) {
+                        text-align: center;
+                        margin-bottom: 20px;
                     }
                 }
             }
